pagination modified - shows POJO with additional page details (custom json response)